--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -10,5 +10,6 @@
     <body>
 		<div id="root"></div>
 		<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+		<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     </body>
 </html>
